2015-12-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c:
	  Option for ELF output in STM8 backend.

2015-12-20 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/linksrc/lkelf.c,
	  sdas/linksrc/lkmain.c:
	  STM8 ELF linker support from patch #251.

2015-12-18 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCmain.c:
	  Always use preprocessor in standard mode.
	* device/include/stdlib.h:
	  Fix declaration order for inlined aligned_alloc().

2015-12-17 Ben Shi <powerstudio1st AT 163 DOT com>

	* Makefile.in
	  Fix the conflict in parallel build caused by component dependency.

2015-12-16 Ben Shi <powerstudio1st AT 163 DOT com>

	* sim/ucsim/cmd.src/cmdset.cc
	  Apply a modified version of patch #250. 

2015-12-14 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c:
	  Avoid redundant call to processParms().
	* support/regression/tests/bug-2436.c
	  Add a new test case.

2015-12-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/wchar.h:
	  A basic wchar.h with for types that are useful even with no wide character functions around.

2015-12-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCerr.c
	* src/SDCCerr.h
	  Fix a bug of type definition of a function by typedef.

2015-12-02 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	* src/SDCCerr.h
	  Fix defects in previous commit.

2015-12-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCerr.c
	* src/SDCCerr.h
	  Remove warning #220 (W_ANONYMOUS_MEMBER).

2015-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Fix operandsNotRelated() bug #2435.
	* device/include/stddef.h,
	  device/include/stdlib.h,
	  src/SDCC.lex,
	  src/SDCCmain.c,
	  src/SDCCval.c,
	  src/SDCCval.h,
	  support/regression/tests/charconst.c,
	  support/regression/tests/string.c:
	  Make wchar_t UTF-32.
	* support/cpp/Makefile.in:
	  Fix call to make.

2015-11-26 Ben Shi <powerstudio1st AT 163 DOT com>